[workspace]
members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf", "fuzz"]
default-members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf"]

[profile.bench]
debug = true

[profile.release]
debug = true

[patch.crates-io]
# tokio = { path = "../tokio/tokio" }
# mio = { git = "https://github.com/tokio-rs/mio.git" }
# h2 = { git = "https://github.com/hyperium/h2.git" }
rustls = { git = "https://github.com/mokeyish/rustls.git", branch = "patched_main"}
